--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "@img-recognition/source",
   "version": "0.0.0",
   "license": "MIT",
+  "engines": {
+    "node": ">=18.12.0 <19",
+    "npm": ">=8.19.2 <9"
+  },
   "scripts": {
     "ng": "nx",
     "nx": "nx",
