--- a/apps/fbn-e2e/project.json
+++ b/apps/fbn-e2e/project.json
@@ -1,22 +1,22 @@
 {
-  "name": "img-recognition-e2e",
+  "name": "fbn-e2e",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/img-recognition-e2e/src",
+  "sourceRoot": "apps/fbn-e2e/src",
   "projectType": "application",
   "targets": {
     "e2e": {
       "executor": "@nx/cypress:cypress",
       "options": {
-        "cypressConfig": "apps/img-recognition-e2e/cypress.config.ts",
-        "devServerTarget": "img-recognition:serve:development",
+        "cypressConfig": "apps/fbn-e2e/cypress.config.ts",
+        "devServerTarget": "fbn:serve:development",
         "testingType": "e2e"
       },
       "configurations": {
         "production": {
-          "devServerTarget": "img-recognition:serve:production"
+          "devServerTarget": "fbn:serve:production"
         },
         "ci": {
-          "devServerTarget": "img-recognition:serve-static"
+          "devServerTarget": "fbn:serve-static"
         }
       }
     },
@@ -24,10 +24,10 @@
       "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["apps/img-recognition-e2e/**/*.{js,ts}"]
+        "lintFilePatterns": ["apps/fbn-e2e/**/*.{js,ts}"]
       }
     }
   },
   "tags": [],
-  "implicitDependencies": ["img-recognition"]
+  "implicitDependencies": ["fbn"]
 }
