--- a/apps/fbn/project.json
+++ b/apps/fbn/project.json
@@ -1,25 +1,25 @@
 {
-  "name": "img-recognition",
+  "name": "fbn",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "prefix": "img-recognition",
-  "sourceRoot": "apps/img-recognition/src",
+  "prefix": "fbn",
+  "sourceRoot": "apps/fbn/src",
   "tags": [],
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/apps/img-recognition",
-        "index": "apps/img-recognition/src/index.html",
-        "main": "apps/img-recognition/src/main.ts",
+        "outputPath": "dist/apps/fbn",
+        "index": "apps/fbn/src/index.html",
+        "main": "apps/fbn/src/main.ts",
         "polyfills": ["zone.js"],
-        "tsConfig": "apps/img-recognition/tsconfig.app.json",
+        "tsConfig": "apps/fbn/tsconfig.app.json",
         "assets": [
-          "apps/img-recognition/src/favicon.ico",
-          "apps/img-recognition/src/assets"
+          "apps/fbn/src/favicon.ico",
+          "apps/fbn/src/assets"
         ],
-        "styles": ["apps/img-recognition/src/styles.scss"],
+        "styles": ["apps/fbn/src/styles.scss"],
         "scripts": []
       },
       "configurations": {
@@ -53,10 +53,10 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "browserTarget": "img-recognition:build:production"
+          "browserTarget": "fbn:build:production"
         },
         "development": {
-          "browserTarget": "img-recognition:build:development"
+          "browserTarget": "fbn:build:development"
         }
       },
       "defaultConfiguration": "development"
@@ -64,7 +64,7 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "browserTarget": "img-recognition:build"
+        "browserTarget": "fbn:build"
       }
     },
     "lint": {
@@ -72,8 +72,8 @@
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": [
-          "apps/img-recognition/**/*.ts",
-          "apps/img-recognition/**/*.html"
+          "apps/fbn/**/*.ts",
+          "apps/fbn/**/*.html"
         ]
       }
     },
@@ -81,7 +81,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/img-recognition/jest.config.ts",
+        "jestConfig": "apps/fbn/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
@@ -94,7 +94,7 @@
     "serve-static": {
       "executor": "@nx/web:file-server",
       "options": {
-        "buildTarget": "img-recognition:build"
+        "buildTarget": "fbn:build"
       }
     }
   }
