--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@img-recognition/source",
+  "name": "@fbn/source",
   "version": "0.0.0",
   "license": "MIT",
   "engines": {
@@ -33,8 +33,10 @@
     "@angular-devkit/build-angular": "~16.1.0",
     "@angular-devkit/core": "~16.1.0",
     "@angular-devkit/schematics": "~16.1.0",
+    "@angular-eslint/builder": "^16.0.3",
     "@angular-eslint/eslint-plugin": "~16.0.0",
     "@angular-eslint/eslint-plugin-template": "~16.0.0",
+    "@angular-eslint/schematics": "^16.0.3",
     "@angular-eslint/template-parser": "~16.0.0",
     "@angular/cli": "~16.1.0",
     "@angular/compiler-cli": "~16.1.0",
