--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "ng": "nx",
     "nx": "nx",
+    "serve-datagen": "nx serve --configuration development --project datagen",
     "serve-be": "nx serve --configuration development --project fbn-be",
     "serve-fe": "nx serve --configuration development --proxy-config proxy.config.json --project fbn",
     "build": "nx build --prod --project",
@@ -53,12 +54,13 @@
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
     "@nx/cypress": "16.4.0",
+    "@nx/esbuild": "16.4.2",
     "@nx/eslint-plugin": "16.4.0",
     "@nx/jest": "16.4.2",
     "@nx/js": "16.4.2",
     "@nx/linter": "16.4.0",
     "@nx/nest": "^16.4.2",
-    "@nx/node": "16.4.2",
+    "@nx/node": "^16.4.2",
     "@nx/web": "16.4.0",
     "@nx/webpack": "16.4.2",
     "@nx/workspace": "16.4.0",
@@ -68,6 +70,7 @@
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "cypress": "^12.11.0",
+    "esbuild": "^0.17.17",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
@@ -79,7 +82,7 @@
     "nx-cloud": "latest",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
+    "ts-node": "^10.9.1",
     "typescript": "~5.1.3"
   }
 }
