--- a/package.json
+++ b/package.json
@@ -28,12 +28,17 @@
     "@angular/platform-browser": "~16.1.0",
     "@angular/platform-browser-dynamic": "~16.1.0",
     "@angular/router": "~16.1.0",
+    "@fastify/multipart": "^7.7.0",
+    "@fastify/static": "^6.10.2",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/platform-fastify": "^10.0.5",
+    "@nestjs/swagger": "^7.1.1",
     "@ngneat/until-destroy": "^10.0.0-beta.0",
     "@nx/angular": "16.4.0",
     "axios": "^1.0.0",
+    "fastify-swagger": "^5.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
