feat: introduce library 'fbn-streaming'

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "resolveJsonModule": true,
-    "paths": {}
+    "paths": {
+      "@fbn/fbn-streaming": ["libs/fbn-streaming/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
