--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuidv4": "^6.2.13",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
@@ -72,6 +73,7 @@
     "@schematics/angular": "~16.1.0",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
+    "@types/uuidv4": "^5.0.0",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "cypress": "^12.11.0",
