--- a/apps/movrec-api-e2e/project.json
+++ b/apps/movrec-api-e2e/project.json
@@ -1,13 +1,13 @@
 {
-  "name": "fbn-api-e2e",
+  "name": "movrec-api-e2e",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "implicitDependencies": ["fbn-api"],
+  "implicitDependencies": ["movrec-api"],
   "targets": {
     "e2e": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{e2eProjectRoot}"],
       "options": {
-        "jestConfig": "apps/fbn-api-e2e/jest.config.ts",
+        "jestConfig": "apps/movrec-api-e2e/jest.config.ts",
         "passWithNoTests": true
       }
     },
@@ -15,7 +15,7 @@
       "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["apps/fbn-api-e2e/**/*.{js,ts}"]
+        "lintFilePatterns": ["apps/movrec-api-e2e/**/*.{js,ts}"]
       }
     }
   }
