--- a/apps/movrec-ui/project.json
+++ b/apps/movrec-ui/project.json
@@ -1,9 +1,9 @@
 {
-  "name": "fbn-ui",
+  "name": "movrec-ui",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "prefix": "fbn-ui",
-  "sourceRoot": "apps/fbn-ui/src",
+  "prefix": "movrec-ui",
+  "sourceRoot": "apps/movrec-ui/src",
   "tags": [],
   "targets": {
     "build": {
@@ -12,19 +12,19 @@
         "{options.outputPath}"
       ],
       "options": {
-        "outputPath": "dist/apps/fbn-ui",
-        "index": "apps/fbn-ui/src/index.html",
-        "main": "apps/fbn-ui/src/main.ts",
+        "outputPath": "dist/apps/movrec-ui",
+        "index": "apps/movrec-ui/src/index.html",
+        "main": "apps/movrec-ui/src/main.ts",
         "polyfills": [
           "zone.js"
         ],
-        "tsConfig": "apps/fbn-ui/tsconfig.app.json",
+        "tsConfig": "apps/movrec-ui/tsconfig.app.json",
         "assets": [
-          "apps/fbn-ui/src/favicon.ico",
-          "apps/fbn-ui/src/assets"
+          "apps/movrec-ui/src/favicon.ico",
+          "apps/movrec-ui/src/assets"
         ],
         "styles": [
-          "apps/fbn-ui/src/styles.scss"
+          "apps/movrec-ui/src/styles.scss"
         ],
         "scripts": []
       },
@@ -59,10 +59,10 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "browserTarget": "fbn-ui:build:production"
+          "browserTarget": "movrec-ui:build:production"
         },
         "development": {
-          "browserTarget": "fbn-ui:build:development"
+          "browserTarget": "movrec-ui:build:development"
         }
       },
       "defaultConfiguration": "development"
@@ -70,7 +70,7 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "browserTarget": "fbn-ui:build"
+        "browserTarget": "movrec-ui:build"
       }
     },
     "lint": {
@@ -80,8 +80,8 @@
       ],
       "options": {
         "lintFilePatterns": [
-          "apps/fbn-ui/**/*.ts",
-          "apps/fbn-ui/**/*.html"
+          "apps/movrec-ui/**/*.ts",
+          "apps/movrec-ui/**/*.html"
         ]
       }
     },
@@ -91,7 +91,7 @@
         "{workspaceRoot}/coverage/{projectRoot}"
       ],
       "options": {
-        "jestConfig": "apps/fbn-ui/jest.config.ts",
+        "jestConfig": "apps/movrec-ui/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
@@ -104,7 +104,7 @@
     "serve-static": {
       "executor": "@nx/web:file-server",
       "options": {
-        "buildTarget": "fbn-ui:build"
+        "buildTarget": "movrec-ui:build"
       }
     }
   }
