--- a/proxy.config.json
+++ b/proxy.config.json
@@ -3,5 +3,10 @@
     "target": "http://localhost:3000",
     "secure": false,
     "changeOrigin": true
-  }
+  },
+  "/predict": {
+    "target": "http://localhost:8000",
+    "secure": false,
+    "changeOrigin": true
+  }  
 }
