--- a/libs/fbn-imgrec/project.json
+++ b/libs/fbn-imgrec/project.json
@@ -1,21 +1,21 @@
 {
-  "name": "fbn-streaming",
+  "name": "fbn-imgrec",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/fbn-streaming/src",
+  "sourceRoot": "libs/fbn-imgrec/src",
   "projectType": "library",
   "targets": {
     "lint": {
       "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["libs/fbn-streaming/**/*.ts"]
+        "lintFilePatterns": ["libs/fbn-imgrec/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/fbn-streaming/jest.config.ts",
+        "jestConfig": "libs/fbn-imgrec/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
