build: fix Dockerfile conf path

--- a/apps/imgrec-ui/Dockerfile
+++ b/apps/imgrec-ui/Dockerfile
@@ -1,6 +1,6 @@
 ## BUILD ##
 ## equals node lts
-FROM node:18-bullseye-slim AS BUILD
+FROM node:18.12-bullseye-slim AS BUILD
 
 # Copy local code to the container image.
 ENV APP_HOME /app
@@ -11,6 +11,6 @@ RUN npm ci && npm run build imgrec-ui
 
 ## RUN ##
 FROM nginx:alpine
-COPY $APP_HOME/apps/imgrec-ui/nginx /etc/nginx/nginx.conf
+COPY $APP_HOME/apps/imgrec-ui/nginx/nginx.conf /etc/nginx/nginx.conf
 COPY --from=BUILD $APP_HOME/dist/apps/imgrec-ui /usr/share/nginx/html
 EXPOSE 80
