build: adapt Dockerfile

--- a/apps/imgrec-ui/Dockerfile
+++ b/apps/imgrec-ui/Dockerfile
@@ -11,6 +11,11 @@ RUN npm ci && npm run build imgrec-ui
 
 ## RUN ##
 FROM nginx:alpine
-COPY $APP_HOME/apps/imgrec-ui/nginx/nginx.conf /etc/nginx/nginx.conf
-COPY --from=BUILD $APP_HOME/dist/apps/imgrec-ui /usr/share/nginx/html
+
+# Copy the necessary files from the first stage (BUILD) to the second stage (RUN)
+COPY --from=BUILD /app/dist/apps/imgrec-ui /usr/share/nginx/html
+
+# Copy the nginx configuration from your local code
+COPY apps/imgrec-ui/nginx/nginx.conf /etc/nginx/nginx.conf
+
 EXPOSE 80
