build: configure nginx proxy_pass

--- a/apps/imgrec-ui/nginx/nginx.conf
+++ b/apps/imgrec-ui/nginx/nginx.conf
@@ -1,16 +1,24 @@
 events{}
 http {
     include /etc/nginx/mime.types;
+
     server {
         listen 80;
+
         server_name localhost;
         root /usr/share/nginx/html;
         index index.html;
+
         location / {
             try_files $uri $uri/ /index.html;
         }
         location ~* \.(eot|ttf|woff|woff2|js|json|css|html|svg|png)$  {
           add_header Access-Control-Allow-Origin *;
+        }
+
+        location /predict {
+            client_max_body_size 0;
+            proxy_pass http://object-detection-service:8000;
         }
     }
 }
