--- a/apps/imgrec-ui/nginx/nginx.conf
+++ b/apps/imgrec-ui/nginx/nginx.conf
@@ -16,9 +16,10 @@ http {
           add_header Access-Control-Allow-Origin *;
         }
 
-        location /predict {
-            client_max_body_size 0;
-            proxy_pass http://object-detection-service:8000;
-        }
+        # # THis only works for docker-compose, not for k8s
+        # location /predict {
+        #     client_max_body_size 0;
+        #     proxy_pass http://object-detection-service:8000;
+        # }
     }
 }
