refactor: change run dev scripts to convention

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "ng": "nx",
     "nx": "nx",
     "serve-datagen": "nx serve --configuration development --project datagen",
-    "serve-movrec-api": "nx serve --configuration development --project movrec-api",
-    "serve-movrec-ui": "nx serve --configuration development --proxy-config proxy.config.json --project movrec-ui",
-    "serve-imgrec-ui": "nx serve --configuration development --proxy-config proxy.config.json --project imgrec-ui",
+    "movrec-api:dev": "nx serve --configuration development --project movrec-api",
+    "movrec-ui:dev": "nx serve --configuration development --proxy-config proxy.config.json --project movrec-ui",
+    "imgrec-ui:dev": "nx serve --configuration development --proxy-config proxy.config.json --project imgrec-ui",
     "build": "nx build --prod --project",
     "test": "nx test --watch=false --project",
     "test:watch": "nx test --watch=true --project"
