--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,10 @@
 version: "3.9"
 
-networks:
-  imgrec:
-    name: imgrec
-    driver: bridge
-
 services:
   object-detection-service:
-    image: niggi88/object-detection-service:v1.2
+    image: niggi88/object-detection-service:f-video-prediction.1
     hostname: object-detection-service
     container_name: object-detection-service
     restart: always
-    networks:
-      - imgrec
     ports:
       - "8000:8000"
-  imgrec-ui:
-    image: europe-central2-docker.pkg.dev/imgrec-395114/freecoll/imgrec-ui
-    hostname: imgrec-ui
-    container_name: imgrec-ui
-    restart: always
-    depends_on:
-      - object-detection-service
-    networks:
-      - imgrec
-    ports:
-      - "80:80"
-    volumes:
-      - ./apps/imgrec-ui/nginx/nginx.conf:/etc/nginx/nginx.conf
