--- a/apps/imgrec-ui/project.json
+++ b/apps/imgrec-ui/project.json
@@ -19,8 +19,9 @@
           "apps/imgrec-ui/src/favicon.ico",
           "apps/imgrec-ui/src/assets"
         ],
-        "styles": ["apps/imgrec-ui/src/styles.scss"],
-        "scripts": []
+        "styles": ["apps/imgrec-ui/src/styles/styles.scss"],
+        "scripts": [],
+        "webWorkerTsConfig": "apps/imgrec-ui/tsconfig.worker.json"
       },
       "configurations": {
         "production": {
@@ -82,7 +83,8 @@
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "apps/imgrec-ui/jest.config.ts",
-        "passWithNoTests": true
+        "passWithNoTests": true,
+        "webWorkerTsConfig": "apps/imgrec-ui/tsconfig.worker.json"
       },
       "configurations": {
         "ci": {
